# EdgeDetectionViewer

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  SUBMISSION.md  build.sh  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_processor.cpp
app/src/main/java/com/example/edgedetectionviewer/: CameraRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edgedetectionviewer/: NativeProcessorTest.java
docs/: ARCHITECTURE.md  README.md  SETUP_GUIDE.md
web/: index.html  package.json  styles.css  test.html
web/src/: viewer.ts
